@@ -1,6 +1,7 @@
 require 'test/unit'
 require 'resolv'
 require 'socket'
+require 'tempfile'
 
 class TestResolvDNS < Test::Unit::TestCase
   def setup
@@ -150,4 +151,16 @@ class TestResolvDNS < Test::Unit::TestCase
     }
   end
 
+  def test_invalid_byte_comment
+    bug9273 = '[ruby-core:59239] [Bug #9273]'
+    Tempfile.open('resolv_test_dns_') do |tmpfile|
+      tmpfile.print("\xff\x00\x40")
+      tmpfile.close
+      Resolv::DNS.open(tmpfile.path) do |dns|
+        assert_nothing_raised(ArgumentError, bug9273) do
+          dns.getresources("foo.example.org", Resolv::DNS::Resource::IN::A)
+        end
+      end
+    end
+  end
 end
